Add -Wno-address-of-packed-member option for the debug build
This clang option has started generating lots of warnings. Disable
it to fix the build.

Actually -Wno-format is not necessary.

Change-Id: Ie3df928bf8aa7d079abb9cce656fc0665abe73ba

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -72,7 +72,7 @@ static_library("lwip") {
     ]
     cflags = [
       "-DLWIP_DEBUG",
-      "-Wno-format",
+      "-Wno-address-of-packed-member",
     ]
   }
 }
